amazing fun creating regions.

--- a/templates/CommandMaps.hbs
+++ b/templates/CommandMaps.hbs
@@ -1,5 +1,1 @@
-<div>
-    <h1>CommandMaps</h1>
-    <br>
-    <button id="next" type="button" class="btn btn-default">Next</button>
-</div>
+<img src="img/tabs/commandmap_layout.png" />
