Added Ribbons functionality and icon display.

--- a/templates/CommandMaps.hbs
+++ b/templates/CommandMaps.hbs
@@ -1,1 +1,14 @@
-<img src="img/tabs/commandmap_layout.png" />
+<div class="row">
+    <div class="col-md-2">
+        <img id="commandImg" src="img/icons/bold.png" />
+    </div>
+    <div class="col-md-2">
+        <p id="commandDescription">bold</p>
+    </div>
+    <div class="col-md-8">
+        <button id="next" type="button" class="btn btn-default">Skip (testing only)</button>
+    </div>
+</div>
+<div class="row">
+    <img id="layoutImg" src="img/tabs/commandmap_layout.png" />
+</div>
