--- a/templates/Ribbons.hbs
+++ b/templates/Ribbons.hbs
@@ -1,5 +1,14 @@
-<div>
-    <h1>Ribbons</h1>
-    <br>
-    <button id="next" type="button" class="btn btn-default">Next</button>
+<div class="row">
+    <div class="col-md-2">
+        <img id="commandImg" src="img/icons/bold.png" />
+    </div>
+    <div class="col-md-2">
+        <p id="commandDescription">bold</p>
+    </div>
+    <div class="col-md-8">
+        <button id="next" type="button" class="btn btn-default">Skip (testing only)</button>
+    </div>
+</div>
+<div class="row">
+    <img id="layoutImg" src="img/tabs/home_tab.png" />
 </div>
