survey and NASA linked

--- a/templates/Survey.hbs
+++ b/templates/Survey.hbs
@@ -1,5 +1,10 @@
 <div>
-    <h1>Survey</h1>
-    <br>
+    <h1>Interface Preference Survey</h1>
+    Which interface do you prefer?
+        <form action="" name="preference">
+        	<input type="RADIO" name="myColor" value="1" > CommandMap
+            <input type="RADIO" name="myColor" value="2"> Ribbon
+        </form>
+    <br>    
     <button id="next" type="button" class="btn btn-default">Next</button>
 </div>
