--- a/templates/Start.hbs
+++ b/templates/Start.hbs
@@ -1,5 +1,5 @@
-<div>
+<div style="width:100%;height:100%;position:absolute;vertical-align:middle;text-align:center;">
     <h1>Start</h1>
     <br>
-    <button id="next" type="button" class="btn btn-default">Next</button>
+    <button id="next" type="button" class="btn btn-default" style="margin-left:auto;margin-right:auto;display:block;margin-top:20%;margin-bottom:0%">Next</button>
 </div>
