--- a/templates/Survey.hbs
+++ b/templates/Survey.hbs
@@ -2,7 +2,7 @@
     <h1>Interface Preference Survey</h1>
     Which interface do you prefer?
         <form action="" name="preference">
-        	<input type="RADIO" name="myColor" value="1" > CommandMap
+        	<input type="RADIO" name="myColor" value="1" checked> CommandMap
             <input type="RADIO" name="myColor" value="2"> Ribbon
         </form>
     <br>    
