--- a/templates/Start.hbs
+++ b/templates/Start.hbs
@@ -1,5 +1,6 @@
-<div style="width:100%;height:100%;position:absolute;vertical-align:middle;text-align:center;">
+<div style="width:200px;height:100px;position:absolute;left:50%;top:50%;
+margin-left:-50px;margin-top:-50px;text-align:center;">
     <h1>Start</h1>
     <br>
-    <button id="next" type="button" class="btn btn-default" style="margin-left:auto;margin-right:auto;display:block;margin-top:20%;margin-bottom:0%">Next</button>
+    <button id="next" type="button" class="btn btn-default">Next</button>
 </div>
