--- a/templates/Nasa.hbs
+++ b/templates/Nasa.hbs
@@ -1,4 +1,7 @@
-<div id="Survey " class="tab-pane">
+<div id="nasa" class="row">
+    <div class="col-lg-4"></div>
+    <div class="col-lg-4">
+        <div class="text-left">
             <h1>NASA-TLX Survey</h1>
             <!-- Survey content goes here -->
               Mental Demand: How mentally demanding was the task?
@@ -54,7 +57,10 @@
                 <input type="RADIO" name="myColor" value="4"> High
                 <input type="RADIO" name="myColor" value="5"> Very High
               </form>
-              <br>
-              <button id="next" type="button" class="btn btn-default">Next</button>
-
-          </div>   
+        </div>
+        <div class="text-right">
+            <button id="next" type="button" class="btn btn-default">Next</button>
+        </div>
+    </div>
+    <div class="col-lg-4"></div>
+</div>
