--- a/templates/Start.hbs
+++ b/templates/Start.hbs
@@ -1,5 +1,10 @@
-<div style="width:100%;height:100%;position:absolute;vertical-align:middle;text-align:center;">
-    <h1>Start</h1>
-    <br>
-    <button id="next" type="button" class="btn btn-default" style="margin-left:auto;margin-right:auto;display:block;margin-top:20%;margin-bottom:0%">Next</button>
+<div class="row">
+    <div class="col-lg-4"></div>
+    <div class="col-lg-4">
+        <div class="text-center">
+            <h2>To begin, press the start button below.</h2>
+            <button id="next" type="button" class="btn btn-lg btn-default">Start</button>
+        </div>
+    </div>
+    <div class="col-lg-4"></div>
 </div>
