--- a/templates/CommandMaps.hbs
+++ b/templates/CommandMaps.hbs
@@ -1,14 +1,12 @@
 <div class="row">
-    <div class="col-md-2">
-        <img id="commandImg" src="img/icons/bold.png" />
+    <div class="col-lg-10" id="layoutColumn">
+        <img class="unselectable img-responsive" id="layoutImg" src="img/tabs/commandmap_layout.png" />
     </div>
-    <div class="col-md-2">
+    <div class="col-lg-2 text-center" id="infoColumn">
+        <div class="text-center">
+            <img id="commandImg" class="unselectable" src="img/icons/bold.png" />
+        </div>
         <p id="commandDescription">bold</p>
-    </div>
-    <div class="col-md-8">
         <button id="next" type="button" class="btn btn-default">Skip (testing only)</button>
     </div>
-</div>
-<div class="row">
-    <img id="layoutImg" src="img/tabs/commandmap_layout.png" />
 </div>
