--- a/templates/Survey.hbs
+++ b/templates/Survey.hbs
@@ -1,10 +1,21 @@
-<div>
-    <h1>Interface Preference Survey</h1>
-    Which interface do you prefer?
-        <form action="" name="preference">
-        	<input type="RADIO" name="myColor" value="1" > CommandMap
-            <input type="RADIO" name="myColor" value="2"> Ribbon
-        </form>
-    <br>    
-    <button id="next" type="button" class="btn btn-default">Next</button>
+<div id="survey" class="row">
+    <div class="col-lg-4"></div>
+    <div class="col-lg-4">
+        <div class="text-left">
+            <h1>Interface Preference</h1>
+            Which interface do you prefer?
+            <form action="" name="preference">
+                <div class="form-group-lg">
+                    <input type="RADIO" name="myColor" value="1" > CommandMap
+                </div>
+                <div class="form-group-lg">
+                    <input type="RADIO" name="myColor" value="2"> Ribbon
+                </div>
+            </form>
+        </div>
+        <div class="text-right">
+            <button id="next" type="button" class="btn btn-default">Submit</button>
+        </div>
+    </div>
+    <div class="col-lg-4"></div>
 </div>
