--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,19 +1,3 @@
-/*
-html, body {
-    height: 100%;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-}
-
-#layoutImg {
-  background-size:100% auto;
-  background: url('../img/tabs/commandmap_layout.png') no-repeat;
-  height: 500px;
-}
-
-*/
-
 html, body {
     height: 100%;
 }
@@ -28,11 +12,6 @@ html, body {
     box-sizing: border-box;
 
     display: table;
-    vertical-align: middle;
-}
-
-.vertical-center-row {
-    display: table-cell;
     vertical-align: middle;
 }
 
@@ -80,4 +59,15 @@ html, body {
     height: 75px;
     object-fit: contain;
     overflow: hidden;
+}
+
+.vertical-center-item {
+    position:absolute; top:50%;
+}
+
+.horizontal-center-item {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: -10px;
 }
