--- a/templates/ThankYou.hbs
+++ b/templates/ThankYou.hbs
@@ -1,3 +1,7 @@
-<div>
-    <h1>Thank You!</h1>
-</div>
+<row id="thankyou">
+    <div class="col-lg-12 vertical-center-item">
+        <div class="text-center">
+            <h1>Thank You!</h1>
+        </div>
+    </div>
+</row>
