infinite loop fixed,note on browser, survey checked

--- a/templates/Survey.hbs
+++ b/templates/Survey.hbs
@@ -6,7 +6,7 @@
             Which interface do you prefer?
             <form action="" name="preference">
                 <div class="form-group-lg">
-                    <input type="RADIO" name="myColor" value="1" > CommandMap
+                    <input type="RADIO" name="myColor" value="1" checked> CommandMap
                 </div>
                 <div class="form-group-lg">
                     <input type="RADIO" name="myColor" value="2"> Ribbon
