added  nasa/survey logs.

--- a/templates/Nasa.hbs
+++ b/templates/Nasa.hbs
@@ -10,61 +10,61 @@
             <br>
             <br>
               Mental Demand: How mentally demanding was the task?
-              <form action="" name="orderForm_mental">
-                <input type="RADIO" name="myColor" value="1" checked> Very Low
-                <input type="RADIO" name="myColor" value="2"> Low
-                <input type="RADIO" name="myColor" value="3"> Moderate
-                <input type="RADIO" name="myColor" value="4"> High
-                <input type="RADIO" name="myColor" value="5"> Very High
+            <form action="">
+                <input type="RADIO" name="mental" value="1"> Very Low
+                <input type="RADIO" name="mental" value="2"> Low
+                <input type="RADIO" name="mental" value="3"> Moderate
+                <input type="RADIO" name="mental" value="4"> High
+                <input type="RADIO" name="mental" value="5"> Very High
               </form>
               <br>
               Physical Demand: How physically demanding was the task?
-              <form action="" name="orderForm_physical">
-                <input type="RADIO" name="myColor" value="1" checked> Very Low
-                <input type="RADIO" name="myColor" value="2"> Low
-                <input type="RADIO" name="myColor" value="3"> Moderate
-                <input type="RADIO" name="myColor" value="4"> High
-                <input type="RADIO" name="myColor" value="5"> Very High
-              </form>
+            <form action="">
+                <input type="RADIO" name="physical" value="1"> Very Low
+                <input type="RADIO" name="physical" value="2"> Low
+                <input type="RADIO" name="physical" value="3"> Moderate
+                <input type="RADIO" name="physical" value="4"> High
+                <input type="RADIO" name="physical" value="5"> Very High
+                  </form>
               <br>
               Temporal Demand: How hurried or rushed was the pace of the task?
-              <form action="" name="orderForm_temporal">
-                <input type="RADIO" name="myColor" value="1" checked> Very Low
-                <input type="RADIO" name="myColor" value="2"> Low
-                <input type="RADIO" name="myColor" value="3"> Moderate
-                <input type="RADIO" name="myColor" value="4"> High
-                <input type="RADIO" name="myColor" value="5"> Very High
-              </form>
+            <form action="">
+                <input type="RADIO" name="temporal" value="1"> Very Low
+                <input type="RADIO" name="temporal" value="2"> Low
+                <input type="RADIO" name="temporal" value="3"> Moderate
+                <input type="RADIO" name="temporal" value="4"> High
+                <input type="RADIO" name="temporal" value="5"> Very High
+                  </form>
               <br>
               Performance: How successful were you in accomplishing what you were asked to do?
-              <form action="" name="orderForm_performance">
-                <input type="RADIO" name="myColor" value="1" checked> Very Low
-                <input type="RADIO" name="myColor" value="2"> Low
-                <input type="RADIO" name="myColor" value="3"> Moderate
-                <input type="RADIO" name="myColor" value="4"> High
-                <input type="RADIO" name="myColor" value="5"> Very High
-              </form>
+            <form action="">
+                <input type="RADIO" name="performance" value="1"> Very Low
+                <input type="RADIO" name="performance" value="2"> Low
+                <input type="RADIO" name="performance" value="3"> Moderate
+                <input type="RADIO" name="performance" value="4"> High
+                <input type="RADIO" name="performance" value="5"> Very High
+                </form>
               <br>
               Effort: How hard did you have to work to accomplish your level of performance?
-              <form action="" name="orderForm_effort">
-                <input type="RADIO" name="myColor" value="1" checked> Very Low
-                <input type="RADIO" name="myColor" value="2"> Low
-                <input type="RADIO" name="myColor" value="3"> Moderate
-                <input type="RADIO" name="myColor" value="4"> High
-                <input type="RADIO" name="myColor" value="5"> Very High
-              </form>
-              <br>  
+            <form action="">
+                <input type="RADIO" name="effort" value="1"> Very Low
+                <input type="RADIO" name="effort" value="2"> Low
+                <input type="RADIO" name="effort" value="3"> Moderate
+                <input type="RADIO" name="effort" value="4"> High
+                <input type="RADIO" name="effort" value="5"> Very High
+                </form>
+              <br>
               Frustration: How insecure, discouraged, irritated, stressed, and annoyed were you?
-              <form action="" name="orderForm_frustration">
-                <input type="RADIO" name="myColor" value="1" checked> Very Low
-                <input type="RADIO" name="myColor" value="2"> Low
-                <input type="RADIO" name="myColor" value="3"> Moderate
-                <input type="RADIO" name="myColor" value="4"> High
-                <input type="RADIO" name="myColor" value="5"> Very High
-              </form>
+            <form action="">
+                <input type="RADIO" name="frustration" value="1"> Very Low
+                <input type="RADIO" name="frustration" value="2"> Low
+                <input type="RADIO" name="frustration" value="3"> Moderate
+                <input type="RADIO" name="frustration" value="4"> High
+                <input type="RADIO" name="frustration" value="5"> Very High
+                </form>
         </div>
         <div class="text-right">
-            <button id="next" type="button" class="btn btn-default">Next</button>
+            <button id="next" type="button" class="btn btn-default" disabled>Next</button>
         </div>
     </div>
     <div class="col-lg-4"></div>
