--- a/templates/Survey.hbs
+++ b/templates/Survey.hbs
@@ -4,12 +4,12 @@
         <div class="text-left">
             <h1>Interface Preference</h1>
             Which interface do you prefer?
-            <form action="" name="preference">
+            <form action="">
                 <div class="form-group-lg">
-                    <input type="RADIO" name="myColor" value="1" checked> CommandMap
+                    <input type="RADIO" name="preference" value="CommandMaps"> CommandMaps
                 </div>
                 <div class="form-group-lg">
-                    <input type="RADIO" name="myColor" value="2"> Ribbon
+                    <input type="RADIO" name="preference" value="Ribbons"> Ribbons
                 </div>
             </form>
         </div>
