Removed "skip test."

--- a/templates/Ribbons.hbs
+++ b/templates/Ribbons.hbs
@@ -3,7 +3,7 @@
         <img class="unselectable img-responsive" id="layoutImg" src="img/tabs/home_tab.png" />
     </div>
     <div class="col-lg-2 text-center" id="infoColumn">
-        <button id="next" type="button" class="btn btn-default">Skip (testing only)</button>
+        <!-- <button id="next" type="button" class="btn btn-default">Skip (testing only)</button> -->
         <p id="commandDescription">bold</p>
         <div class="text-center">
             <img id="commandImg" class="unselectable" src="img/icons/bold.png" />
