Fix post json issue. Added changes from CommandMaps to Ribbons.

--- a/templates/CommandMaps.hbs
+++ b/templates/CommandMaps.hbs
@@ -3,12 +3,13 @@
         <img class="unselectable img-responsive" id="layoutImg" src="img/tabs/commandmap_layout.png" />
     </div>
     <div class="col-xs-6 col-lg-4">
-        <!-- <button id="next" type="button" class="btn btn-default">Skip (testing only)</button> -->
         <div id="infoColumn">
             <div class="panel panel-default">
                 <div id="commandDescription" class="panel-heading text-center"></div>
                 <div class="panel-body text-center">
                     <img id="commandImg" class="unselectable" src="img/icons/bold.png" />
+                    <br>
+                    <button id="next" type="button" class="btn btn-default hidden">skip</button>
                 </div>
             </div>
         </div>
