--- a/templates/Ribbons.hbs
+++ b/templates/Ribbons.hbs
@@ -1,12 +1,17 @@
 <div class="row">
-    <div class="col-lg-10" id="layoutColumn">
+    <div id="layoutColumn" class="col-xs-6 col-lg-8">
         <img class="unselectable img-responsive" id="layoutImg" src="img/tabs/home_tab.png" />
     </div>
-    <div class="col-lg-2 text-center" id="infoColumn">
-        <!-- <button id="next" type="button" class="btn btn-default">Skip (testing only)</button> -->
-        <p id="commandDescription">bold</p>
-        <div class="text-center">
-            <img id="commandImg" class="unselectable" src="img/icons/bold.png" />
+    <div class="col-xs-6 col-lg-4">
+        <div id="infoColumn">
+            <div class="panel panel-default">
+                <div id="commandDescription" class="panel-heading text-center"></div>
+                <div class="panel-body text-center">
+                    <img id="commandImg" class="unselectable" src="img/icons/bold.png" />
+                    <br>
+                    <button id="next" type="button" class="btn btn-default hidden">skip</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
