--- a/templates/Start.hbs
+++ b/templates/Start.hbs
@@ -2,7 +2,9 @@
     <div class="col-lg-4"></div>
     <div class="col-lg-4">
         <div class="text-center">
-            <h2>To begin, press the start button below.</h2>
+            <h2>Instructions</h2>
+            <p>Please open this url in a browser other than IE and maximize your screen.
+                You will be given further instructions upon clicking the start button below.</p>
             <button id="next" type="button" class="btn btn-lg btn-default">Start</button>
         </div>
     </div>
