--- a/templates/Survey.hbs
+++ b/templates/Survey.hbs
@@ -1,20 +1,47 @@
 <div id="survey" class="row">
     <div class="col-lg-4"></div>
     <div class="col-lg-4">
-        <div class="text-left">
+        <div class="text-center">
             <h1>Interface Preference</h1>
             Which interface do you prefer?
-            <form action="">
-                <div class="form-group-lg">
-                    <input type="RADIO" name="preference" value="CommandMaps"> CommandMaps
+            {{#if isGroup0}}
+                <div class="row">
+                    <div id="commandmaps-choice" class="col-xs-6 col-lg-6 addPadding">
+                        <img class="img-responsive" src="img/commandmaps_thumbnail.png" />
+                    </div>
+                    <div id="ribbons-choice" class="col-xs-6 col-lg-6 addPadding">
+                        <img class="img-responsive" src="img/ribbons_thumbnail.png" style="padding-top: 56px" />
+                    </div>
                 </div>
-                <div class="form-group-lg">
-                    <input type="RADIO" name="preference" value="Ribbons"> Ribbons
+                <div class="row">
+                    <div class="col-xs-6 col-lg-6 addPadding">
+                        <input type="RADIO" name="preference" value="CommandMaps"> CommandMaps (no tabs)
+                    </div>
+                    <div class="col-xs-6 col-lg-6 addPadding">
+                        <input type="RADIO" name="preference" value="Ribbons"> Ribbons (tabs)
+                    </div>
                 </div>
-            </form>
+            {{else}}
+                <div class="row">
+                    <div id="ribbons-choice" class="col-xs-6 col-lg-6 addPadding">
+                        <img class="img-responsive" src="img/ribbons_thumbnail.png" style="padding-top: 56px" />
+                    </div>
+                    <div id="commandmaps-choice" class="col-xs-6 col-lg-6 addPadding">
+                        <img class="img-responsive" src="img/commandmaps_thumbnail.png" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-6 col-lg-6 addPadding">
+                        <input type="RADIO" name="preference" value="Ribbons"> Ribbons (tabs)
+                    </div>
+                    <div class="col-xs-6 col-lg-6 addPadding">
+                        <input type="RADIO" name="preference" value="CommandMaps"> CommandMaps (no tabs)
+                    </div>
+                </div>
+            {{/if}}
         </div>
         <div class="text-right">
-            <button id="next" type="button" class="btn btn-default">Submit</button>
+            <button id="next" type="button" class="btn btn-default" disabled>Submit</button>
         </div>
     </div>
     <div class="col-lg-4"></div>
