Added way to check content of collections. Added better instructions for Ribbons.

--- a/templates/Ribbons.hbs
+++ b/templates/Ribbons.hbs
@@ -7,7 +7,9 @@
             <div class="panel panel-default">
                 <div id="commandDescription" class="panel-heading text-center"></div>
                 <div class="panel-body text-center">
-                    <p>Instructions: Find the button below on the interface to the left and click on it.</p>
+                  <p>Find the button below on the interface to the left and click on it.
+                     You may have to switch tabs to find the button, just as you would
+                     in Microsoft Word.</p>
                     <br>
                     <img id="commandImg" class="unselectable" src="img/icons/bold.png" />
                     <br>
