--- a/templates/CommandMaps.hbs
+++ b/templates/CommandMaps.hbs
@@ -7,7 +7,7 @@
             <div class="panel panel-default">
                 <div id="commandDescription" class="panel-heading text-center"></div>
                 <div class="panel-body text-center">
-                    <p>Instructions: Find the button below on the interface to the left and click on it.</p>
+                    <p>Find the button below on the interface to the left and click on it.</p>
                     <br>
                     <img id="commandImg" class="unselectable" src="img/icons/bold.png" />
                     <br>
