Added survey completion code.

--- a/templates/ThankYou.hbs
+++ b/templates/ThankYou.hbs
@@ -1,7 +1,24 @@
 <row id="thankyou">
-    <div class="col-lg-12 vertical-center-item">
+    <div class="col-lg-12">
         <div class="text-center">
-            <h1>Thank You!</h1>
+            <div class="row">
+                <h1>Thank You!</h1>
+            </div>
+            <div class="row">
+                <div class="col-xs-4"></div>
+                    <div class="col-xs-4">
+                        <div class=" addPadding">
+                            <div class="panel panel-success">
+                            <div id="commandDescription" class="panel-heading text-center">Survey Completion Code</div>
+                            <div class="panel-body text-center">
+                                <b>{{session}}</b>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-4"></div>
+            </div>
+
         </div>
     </div>
 </row>
